--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -86,6 +86,13 @@
 
 }
 
+@media (min-width: 500px) and (max-width: 575px) {
+    #home {
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+}
+
 .lead {
     font-family: Calibre-Regular;
     color: #8892B1
