--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -268,6 +268,10 @@ img {
     border-color: var(--color-special);
 }
 
+.link-custom {
+    font-weight: 700;
+    position: relative;
+}
 
 .link-custom::after {
     content: "";
